[package]
name = "ludus"
version = "0.2.2"
description = "headless NES emulator crate"
license = "MIT"
authors = ["Lúcás Meier <cronokirby@gmail.com>"]
homepage = "https://github.com/cronokirby/ludus"
repository = "https://github.com/cronokirby/ludus"
readme = "README.md"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "console_benchmark"
harness = false